try to fix border on iphone

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -77,8 +77,6 @@ h2
 			color: #2A2A2A
 			font: normal normal bold 18px/27px Poppins
 			letter-spacing: 0px
-	
-		
 
 .navbar
 	display: none !important
@@ -119,7 +117,7 @@ h2
 		justify-content: space-between
 		padding: 49px 0 0 0
 		margin: 0 0 150px 0
-	
+
 		&-wrp
 			padding: 93px 0 0 0
 			display: flex
@@ -318,10 +316,6 @@ h2
 			font: normal normal bold 18px/27px Poppins
 			letter-spacing: 0px
 
-
-
-
-
 .location
 	display: flex
 	flex-direction: column
@@ -434,7 +428,7 @@ footer
 		max-width: none
 	h3
 		font: normal normal bold 18px Poppins
-	.main	
+	.main
 		&__start-burger
 			display: flex
 		h1
@@ -536,8 +530,6 @@ footer
 			a
 				font: normal normal normal 10px Poppins
 
-
-
 /* MOBILE SMALL */
 @media (max-width: 479.98px)
 	.main
@@ -560,4 +552,7 @@ footer
 		&__map
 			height: 350px
 			-webkit-border-radius: 30px
-			
+
+#map
+	-webkit-border-radius: 30px !important
+	border-radius: 30px !important
